--- a/genindex.html
+++ b/genindex.html
@@ -248,6 +248,8 @@
 </li>
       <li><a href="mathematics/sets and functions/functions.html#index-1">Codomain</a>
 </li>
+      <li><a href="mathematics/statistics/Linear_Regression.html#index-2">Coefficient of determination</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/sets and functions/sets.html#index-2">Commutative (Abelian) group</a>
@@ -418,12 +420,14 @@
 </li>
       <li><a href="mathematics/linear_algebra/Theory.html#index-1">Linear combination</a>
 </li>
-      <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-5">Linear transformation</a>
+      <li><a href="mathematics/statistics/Linear_Regression.html#index-0">Linear regression</a>
 </li>
-      <li><a href="coding/Intro to Python/5_Lists.html#index-0">Lists</a>
+      <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-5">Linear transformation</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="coding/Intro to Python/5_Lists.html#index-0">Lists</a>
+</li>
       <li><a href="coding/Intro to Python/7_List_comprehensions.html#index-0">Lists: list comprehensions</a>
 </li>
       <li><a href="coding/Intro to Python/8_Nested_lists.html#index-0">Lists: nested lists</a>
@@ -539,6 +543,8 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/sets and functions/functions.html#index-3">Restriction (functions)</a>
+</li>
+      <li><a href="mathematics/statistics/Linear_Regression.html#index-1">Root-mean-square error</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
