--- a/mathematics/statistics/Statistics_for_Geoscientists.html
+++ b/mathematics/statistics/Statistics_for_Geoscientists.html
@@ -40,7 +40,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Extra resources for researchers" href="../../z_extra_resources_for_researchers/intro.html" />
-    <link rel="prev" title="Linear Regression" href="Linear_Regression.html" />
+    <link rel="prev" title="Linear regression" href="Linear_Regression.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -118,7 +118,7 @@
       <a href="intro.html">Statistics</a>
       <ul class="nav sidenav_l3">
       <li class="">
-        <a href="Linear_Regression.html">Linear Regression</a>
+        <a href="Linear_Regression.html">Linear regression</a>
       </li>
       <li class="active">
         <a href="">Introduction to statistics for Geoscientists</a>
@@ -1110,7 +1110,7 @@ Group 2 p-value = 0.00040.
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Linear_Regression.html" title="previous page">Linear Regression</a>
+    <a class='left-prev' id="prev-link" href="Linear_Regression.html" title="previous page">Linear regression</a>
     <a class='right-next' id="next-link" href="../../z_extra_resources_for_researchers/intro.html" title="next page">Extra resources for researchers</a>
 
     </div>
