--- a/mathematics/statistics/intro.html
+++ b/mathematics/statistics/intro.html
@@ -39,7 +39,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Linear Regression" href="Linear_Regression.html" />
+    <link rel="next" title="Linear regression" href="Linear_Regression.html" />
     <link rel="prev" title="Sets" href="../sets and functions/sets.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -118,7 +118,7 @@
       <a href="">Statistics</a>
       <ul class="nav sidenav_l3">
       <li class="">
-        <a href="Linear_Regression.html">Linear Regression</a>
+        <a href="Linear_Regression.html">Linear regression</a>
       </li>
       <li class="">
         <a href="Statistics_for_Geoscientists.html">Introduction to statistics for Geoscientists</a>
@@ -258,7 +258,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="../sets and functions/sets.html" title="previous page">Sets</a>
-    <a class='right-next' id="next-link" href="Linear_Regression.html" title="next page">Linear Regression</a>
+    <a class='right-next' id="next-link" href="Linear_Regression.html" title="next page">Linear regression</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
