--- a/coding/Pandas/6_plotting.html
+++ b/coding/Pandas/6_plotting.html
@@ -39,7 +39,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Geosciences" href="../../geosciences/intro.html" />
+    <link rel="next" title="&lt;no title&gt;" href="../Programming Tools/intro.html" />
     <link rel="prev" title="Creating date-time stamps" href="5_time_stamps.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -115,6 +115,9 @@
         <a href="">Plotting</a>
       </li>
     </ul>
+    </li>
+    <li class="">
+      <a href="../Programming Tools/Untitled.html">Version Control Git</a>
     </li>
   </ul>
   </li>
@@ -430,7 +433,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="5_time_stamps.html" title="previous page">Creating date-time stamps</a>
-    <a class='right-next' id="next-link" href="../../geosciences/intro.html" title="next page">Geosciences</a>
+    <a class='right-next' id="next-link" href="../Programming Tools/intro.html" title="next page">&lt;no title&gt;</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
