--- a/coding/jupyter_book_guide.html
+++ b/coding/jupyter_book_guide.html
@@ -96,6 +96,9 @@
     <li class="">
       <a href="Pandas/intro.html">Pandas</a>
     </li>
+    <li class="">
+      <a href="Programming Tools/Untitled.html">Version Control Git</a>
+    </li>
   </ul>
   </li>
   <li class="">
