--- a/coding/jupyter_book_guide.html
+++ b/coding/jupyter_book_guide.html
@@ -97,7 +97,7 @@
       <a href="Pandas/intro.html">Pandas</a>
     </li>
     <li class="">
-      <a href="Programming Tools/Untitled.html">Version Control Git</a>
+      <a href="Programming Tools/1_Version_Control_Git.html">Version Control Git</a>
     </li>
   </ul>
   </li>
