deploy: 4a727bcff90334bd34fe13f91d3605be1acd2a47

--- a/genindex.html
+++ b/genindex.html
@@ -187,6 +187,7 @@
  | <a href="#K"><strong>K</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
+ | <a href="#N"><strong>N</strong></a>
  | <a href="#O"><strong>O</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#Q"><strong>Q</strong></a>
@@ -226,7 +227,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/sets and functions/composition_and_inverse.html#index-2">Bijection</a>
 </li>
-      <li><a href="coding/Intro to Python/15_Flow_control_statements.html#index-0">Break and continue statements</a>
+      <li><a href="coding/Intro to Python/15_Flow_control_statements.html#index-0">Break and continue statements (python)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -264,7 +265,7 @@
 </li>
       <li><a href="mathematics/series_and_sequences/Fourier Transforms.html#index-3">Convolution</a>
 </li>
-      <li><a href="coding/Intro to Python/11_Functions.html#index-0">Creating functions</a>
+      <li><a href="coding/Intro to Python/11_Functions.html#index-0">Creating functions (python)</a>
 </li>
       <li><a href="mathematics/calculus/Vector_calculus.html#index-10">Curl of a vector field</a>
 </li>
@@ -282,7 +283,7 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="coding/Intro to Python/14_Dictionaries.html#index-0">Dictionaries</a>
+      <li><a href="coding/Intro to Python/14_Dictionaries.html#index-0">Dictionaries (python)</a>
 </li>
       <li><a href="mathematics/calculus/Vector_calculus.html#index-8">Divergence of a vector field</a>
 </li>
@@ -314,7 +315,7 @@
 </li>
       <li><a href="coding/Intro to Python/13_File_handling.html#index-0">File handling</a>
 </li>
-      <li><a href="coding/Intro to Python/1_Printing_and_formatting_statements.html#index-1">Formatted printing</a>
+      <li><a href="coding/Intro to Python/6_For_loops.html#index-0">For loop (python)</a>
 </li>
       <li><a href="mathematics/series_and_sequences/Fourier Series.html#index-0">Fourier series</a>
 </li>
@@ -356,8 +357,6 @@
 <h2 id="H">H</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="coding/Intro to Python/9_Handling_errors.html#index-0">Handling errors</a>
-</li>
       <li><a href="mathematics/differential_equations/10_heat_eq.html#index-0">Heat (diffusion) equation</a>
 </li>
   </ul></td>
@@ -372,20 +371,18 @@
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="coding/Intro to Python/3_If_statement.html#index-0">If statement</a>
-</li>
       <li><a href="mathematics/sets and functions/functions.html#index-4">Image (functions)</a>
 </li>
       <li><a href="mathematics/differential_equations/3_first-order_odes.html#index-0">Implicit form (DE)</a>
 </li>
       <li><a href="mathematics/numerical_methods/Forward_time_centred_space.html#index-1">Implicit scheme</a>
 </li>
-      <li><a href="coding/Intro to Python/10_Importing.html#index-0">Importing modules</a>
+      <li><a href="coding/Intro to Python/10_Importing.html#index-0">Importing modules (python)</a>
+</li>
+      <li><a href="mathematics/sets and functions/composition_and_inverse.html#index-0">Injection</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/sets and functions/composition_and_inverse.html#index-0">Injection</a>
-</li>
       <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-3">Inner product</a>
 </li>
       <li><a href="mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html#index-3">Invariants</a>
@@ -422,19 +419,15 @@
 </li>
       <li><a href="mathematics/statistics/Linear_Regression.html#index-0">Linear regression</a>
 </li>
-      <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-5">Linear transformation</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="coding/Intro to Python/5_Lists.html#index-0">Lists</a>
+      <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-5">Linear transformation</a>
 </li>
-      <li><a href="coding/Intro to Python/7_List_comprehensions.html#index-0">Lists: list comprehensions</a>
+      <li><a href="coding/Intro to Python/7_List_comprehensions.html#index-0">List comprehensions (python)</a>
 </li>
-      <li><a href="coding/Intro to Python/8_Nested_lists.html#index-0">Lists: nested lists</a>
+      <li><a href="coding/Intro to Python/5_Lists.html#index-0">Lists (python)</a>
 </li>
       <li><a href="mathematics/sets and functions/logic.html#index-0">Logic symbols</a>
-</li>
-      <li><a href="coding/Intro to Python/6_For_loops.html#index-0">Loops: for loop</a>
 </li>
       <li><a href="coding/Intro to Python/4_While_loops.html#index-0">Loops: while loops</a>
 </li>
@@ -444,7 +437,7 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="coding/Intro to Python/17_Matplotlib.html#index-0">Matplotlib plotting</a>
+      <li><a href="coding/Intro to Python/17_Matplotlib.html#index-0">Matplotlib plotting (python)</a>
 </li>
       <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-1">Matrix-matrix multiplication</a>
 </li>
@@ -457,6 +450,14 @@
       <li><a href="geosciences/Milankovitch_cycles.html#index-0">Milankovitch cycles</a>
 </li>
       <li><a href="mathematics/complex analysis/Introduction.html#index-1">Modulus</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="N">N</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="coding/Intro to Python/8_Nested_lists.html#index-0">Nested lists (python)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -498,35 +499,29 @@
 </li>
       <li><a href="coding/Pandas/2_filter_select_assign.html#index-1">Pandas: selecting</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="coding/Pandas/3_merge_combine_group_sort.html#index-3">Pandas: sorting</a>
 </li>
       <li><a href="coding/Pandas/4_summary_statistics.html#index-0">Pandas: summary stats</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="coding/Intro to Python/15_Flow_control_statements.html#index-1">Pass statement</a>
+      <li><a href="coding/Intro to Python/15_Flow_control_statements.html#index-1">Pass statement (python)</a>
 </li>
       <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-2">Permutations</a>
 </li>
       <li><a href="geosciences/Dynamic_Earth.html#index-0">Plate tectonics</a>
 </li>
-      <li><a href="coding/Intro to Python/17_Matplotlib.html#index-5">Plots: 3D</a>
+      <li><a href="coding/Intro to Python/17_Matplotlib.html#index-3">Plots: 3D</a>
 </li>
-      <li><a href="coding/Intro to Python/17_Matplotlib.html#index-3">Plots: histogram</a>
+      <li><a href="coding/Intro to Python/17_Matplotlib.html#index-1">Plots: histogram</a>
 </li>
-      <li><a href="coding/Intro to Python/17_Matplotlib.html#index-4">Plots: image</a>
-</li>
-      <li><a href="coding/Intro to Python/17_Matplotlib.html#index-1">Plots: line</a>
-</li>
-      <li><a href="coding/Intro to Python/17_Matplotlib.html#index-2">Plots: scatter</a>
+      <li><a href="coding/Intro to Python/17_Matplotlib.html#index-2">Plots: image</a>
 </li>
       <li><a href="mathematics/differential_equations/9_poisson_laplace_eq.html#index-0">Poisson&#39;s equation</a>
 </li>
       <li><a href="mathematics/complex analysis/complex_plane.html#index-1">Polar form of complex numbers</a>
 </li>
       <li><a href="geosciences/Milankovitch_cycles.html#index-3">Precession</a>
-</li>
-      <li><a href="coding/Intro to Python/1_Printing_and_formatting_statements.html#index-0">Python basics</a>
 </li>
   </ul></td>
 </tr></table>
@@ -564,10 +559,10 @@
 </li>
       <li><a href="mathematics/differential_equations/10_heat_eq.html#index-1">Separation of variables</a>, <a href="mathematics/differential_equations/3_first-order_odes.html#index-2">[1]</a>
 </li>
-      <li><a href="coding/Intro to Python/16_Sets.html#index-0">Sets</a>
+      <li><a href="mathematics/sets and functions/sets.html#index-0">Sets (mathematics)</a>
 
       <ul>
-        <li><a href="mathematics/sets and functions/sets.html#index-0">(mathematics)</a>
+        <li><a href="coding/Intro to Python/16_Sets.html#index-0">(python)</a>
 </li>
       </ul></li>
       <li><a href="mathematics/numerical_methods/Solving_PDEs_SOR.html#index-0">SOR algorithm</a>
@@ -579,6 +574,8 @@
       <li><a href="mathematics/statistics/Statistics_for_Geoscientists.html#index-0">Statistics: basics</a>
 </li>
       <li><a href="mathematics/calculus/Vector_calculus.html#index-5">Streamline plot</a>
+</li>
+      <li><a href="coding/Intro to Python/1_Printing_and_formatting_statements.html#index-0">String formating (python)</a>
 </li>
       <li><a href="mathematics/sets and functions/composition_and_inverse.html#index-1">Surjection</a>
 </li>
@@ -606,7 +603,7 @@
 </li>
       <li><a href="mathematics/sets and functions/elementary_functions_1.html#index-2">Trigonometric functions</a>
 </li>
-      <li><a href="coding/Intro to Python/12_Tuples.html#index-0">Tuples</a>
+      <li><a href="coding/Intro to Python/12_Tuples.html#index-0">Tuples (python)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -614,8 +611,6 @@
 <h2 id="V">V</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="coding/Intro to Python/2_Variables.html#index-0">Variables</a>
-</li>
       <li><a href="mathematics/calculus/Vector_calculus.html#index-0">Vector calculus</a>
 </li>
   </ul></td>
