--- a/coding/Pandas/intro.html
+++ b/coding/Pandas/intro.html
@@ -117,7 +117,7 @@
     </ul>
     </li>
     <li class="">
-      <a href="../Programming Tools/1_Version_Control_Git.html">Version Control Git</a>
+      <a href="../Programming Tools/intro.html">Programming Tools</a>
     </li>
   </ul>
   </li>
