--- a/geosciences/intro.html
+++ b/geosciences/intro.html
@@ -40,7 +40,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="1D heat conduction (layered medium)" href="1D_Heat_Conduction.html" />
-    <link rel="prev" title="Version Control Git" href="../coding/Programming Tools/1_Version_Control_Git.html" />
+    <link rel="prev" title="Version control git" href="../coding/Programming Tools/1_Version_Control_Git.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -250,7 +250,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../coding/Programming Tools/1_Version_Control_Git.html" title="previous page">Version Control Git</a>
+    <a class='left-prev' id="prev-link" href="../coding/Programming Tools/1_Version_Control_Git.html" title="previous page">Version control git</a>
     <a class='right-next' id="next-link" href="1D_Heat_Conduction.html" title="next page">1D heat conduction (layered medium)</a>
 
     </div>
