--- a/mathematics/math_methods_1/Matrices_Linear_Algebra.html
+++ b/mathematics/math_methods_1/Matrices_Linear_Algebra.html
@@ -39,7 +39,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Multivariable calculus" href="Multivariable_Calculus.html" />
+    <link rel="next" title="Numerical differentiation" href="Modelling.html" />
     <link rel="prev" title="Eigenvalues" href="Eigenvalues.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -110,6 +110,9 @@
       </li>
       <li class="active">
         <a href="">Defining a matrix</a>
+      </li>
+      <li class="">
+        <a href="Modelling.html">Numerical differentiation</a>
       </li>
       <li class="">
         <a href="Multivariable_Calculus.html">Multivariable calculus</a>
@@ -587,7 +590,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Eigenvalues.html" title="previous page">Eigenvalues</a>
-    <a class='right-next' id="next-link" href="Multivariable_Calculus.html" title="next page">Multivariable calculus</a>
+    <a class='right-next' id="next-link" href="Modelling.html" title="next page">Numerical differentiation</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
