--- a/mathematics/math_methods_1/Multivariable_Calculus.html
+++ b/mathematics/math_methods_1/Multivariable_Calculus.html
@@ -40,7 +40,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Order of an ODE" href="ODEs.html" />
-    <link rel="prev" title="Defining a matrix" href="Matrices_Linear_Algebra.html" />
+    <link rel="prev" title="Numerical differentiation" href="Modelling.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -110,6 +110,9 @@
       </li>
       <li class="">
         <a href="Matrices_Linear_Algebra.html">Defining a matrix</a>
+      </li>
+      <li class="">
+        <a href="Modelling.html">Numerical differentiation</a>
       </li>
       <li class="active">
         <a href="">Multivariable calculus</a>
@@ -630,7 +633,7 @@ The outer integral is:  32/3
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Matrices_Linear_Algebra.html" title="previous page">Defining a matrix</a>
+    <a class='left-prev' id="prev-link" href="Modelling.html" title="previous page">Numerical differentiation</a>
     <a class='right-next' id="next-link" href="ODEs.html" title="next page">Order of an ODE</a>
 
     </div>
