--- a/mathematics/math_methods_1/Vectors.html
+++ b/mathematics/math_methods_1/Vectors.html
@@ -112,6 +112,9 @@
         <a href="Matrices_Linear_Algebra.html">Defining a matrix</a>
       </li>
       <li class="">
+        <a href="Modelling.html">Numerical differentiation</a>
+      </li>
+      <li class="">
         <a href="Multivariable_Calculus.html">Multivariable calculus</a>
       </li>
       <li class="">
