deploy: f149a5c78bec319bbacff045d0d837381d226ef8

--- a/genindex.html
+++ b/genindex.html
@@ -464,6 +464,10 @@
       <li><a href="coding/Intro to Python/8_Nested_lists.html#index-0">Nested lists (python)</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/numerical_methods/Numerical_integration.html#index-0">Numerical integration</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="O">O</h2>
