--- a/mathematics/numerical_methods/Forward_time_centred_space.html
+++ b/mathematics/numerical_methods/Forward_time_centred_space.html
@@ -40,7 +40,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Runge-Kutta integration method" href="Runge_Kutta_method.html" />
+    <link rel="next" title="Numerical integration" href="Numerical_integration.html" />
     <link rel="prev" title="Numerical methods" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -108,6 +108,9 @@
       <ul class="nav sidenav_l3">
       <li class="active">
         <a href="">Forward Time Centred Space (FTCS) scheme</a>
+      </li>
+      <li class="">
+        <a href="Numerical_integration.html">Numerical integration</a>
       </li>
       <li class="">
         <a href="Runge_Kutta_method.html">Runge-Kutta integration method</a>
@@ -495,7 +498,7 @@ Used dt = 0.0100.
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Numerical methods</a>
-    <a class='right-next' id="next-link" href="Runge_Kutta_method.html" title="next page">Runge-Kutta integration method</a>
+    <a class='right-next' id="next-link" href="Numerical_integration.html" title="next page">Numerical integration</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
