--- a/mathematics/numerical_methods/intro.html
+++ b/mathematics/numerical_methods/intro.html
@@ -110,6 +110,9 @@
         <a href="Forward_time_centred_space.html">Forward Time Centred Space (FTCS) scheme</a>
       </li>
       <li class="">
+        <a href="Numerical_integration.html">Numerical integration</a>
+      </li>
+      <li class="">
         <a href="Runge_Kutta_method.html">Runge-Kutta integration method</a>
       </li>
       <li class="">
