deploy: 679fd7ed4dbfb7684e2613a2c31c73809a16ec09

--- a/geosciences/Wave_dispersion.html
+++ b/geosciences/Wave_dispersion.html
@@ -40,7 +40,7 @@
     <script async="async" src="../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Remote sensing" href="remote_sensing/intro.html" />
+    <link rel="next" title="Machine Learning" href="UROP_shapers/intro.html" />
     <link rel="prev" title="Tides" href="Tides.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -111,6 +111,9 @@
     </li>
     <li class="active">
       <a href="">Wave dispersion</a>
+    </li>
+    <li class="">
+      <a href="UROP_shapers/intro.html">Machine Learning</a>
     </li>
     <li class="">
       <a href="remote_sensing/intro.html">Remote sensing</a>
@@ -7696,7 +7699,7 @@ b28AAAAdZGF0YQAAAAEAAAAATGF2ZjU4LjI5LjEwMA==
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Tides.html" title="previous page">Tides</a>
-    <a class='right-next' id="next-link" href="remote_sensing/intro.html" title="next page">Remote sensing</a>
+    <a class='right-next' id="next-link" href="UROP_shapers/intro.html" title="next page">Machine Learning</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
