--- a/geosciences/remote_sensing/intro.html
+++ b/geosciences/remote_sensing/intro.html
@@ -41,7 +41,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Image filtering" href="Image_Filtering.html" />
-    <link rel="prev" title="Wave dispersion" href="../Wave_dispersion.html" />
+    <link rel="prev" title="Chapter 19 – Hyper-Parameters" href="../UROP_shapers/Chapter 19 -- Hyper-Parameters.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -111,6 +111,9 @@
     </li>
     <li class="">
       <a href="../Wave_dispersion.html">Wave dispersion</a>
+    </li>
+    <li class="">
+      <a href="../UROP_shapers/intro.html">Machine Learning</a>
     </li>
     <li class="active">
       <a href="">Remote sensing</a>
@@ -272,7 +275,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../Wave_dispersion.html" title="previous page">Wave dispersion</a>
+    <a class='left-prev' id="prev-link" href="../UROP_shapers/Chapter 19 -- Hyper-Parameters.html" title="previous page">Chapter 19 – Hyper-Parameters</a>
     <a class='right-next' id="next-link" href="Image_Filtering.html" title="next page">Image filtering</a>
 
     </div>
