--- a/geosciences/Keplerian_Orbits.html
+++ b/geosciences/Keplerian_Orbits.html
@@ -113,6 +113,9 @@
       <a href="Wave_dispersion.html">Wave dispersion</a>
     </li>
     <li class="">
+      <a href="UROP_shapers/intro.html">Machine Learning</a>
+    </li>
+    <li class="">
       <a href="remote_sensing/intro.html">Remote sensing</a>
     </li>
   </ul>
