--- a/geosciences/remote_sensing/Image_Transformations_and_Orthorectification.html
+++ b/geosciences/remote_sensing/Image_Transformations_and_Orthorectification.html
@@ -112,6 +112,9 @@
     <li class="">
       <a href="../Wave_dispersion.html">Wave dispersion</a>
     </li>
+    <li class="">
+      <a href="../UROP_shapers/intro.html">Machine Learning</a>
+    </li>
     <li class="active">
       <a href="intro.html">Remote sensing</a>
       <ul class="nav sidenav_l3">
