--- a/geosciences/remote_sensing/intro.html
+++ b/geosciences/remote_sensing/intro.html
@@ -41,7 +41,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Image filtering" href="Image_Filtering.html" />
-    <link rel="prev" title="Chapter 19 – Hyper-Parameters" href="../UROP_shapers/Chapter 19 -- Hyper-Parameters.html" />
+    <link rel="prev" title="Chapter 20 – Coding Example" href="../UROP_shapers/Chapter 20 -- Coding Example.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -275,7 +275,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../UROP_shapers/Chapter 19 -- Hyper-Parameters.html" title="previous page">Chapter 19 – Hyper-Parameters</a>
+    <a class='left-prev' id="prev-link" href="../UROP_shapers/Chapter 20 -- Coding Example.html" title="previous page">Chapter 20 – Coding Example</a>
     <a class='right-next' id="next-link" href="Image_Filtering.html" title="next page">Image filtering</a>
 
     </div>
