deploy: a75f7f43ab09bb2bf65b7043063be3f844e76f98

--- a/geosciences/remote_sensing/Image_Filtering.html
+++ b/geosciences/remote_sensing/Image_Filtering.html
@@ -113,7 +113,7 @@
       <a href="../Wave_dispersion.html">Wave dispersion</a>
     </li>
     <li class="">
-      <a href="../UROP_shapers/intro.html">Machine Learning</a>
+      <a href="../pytorch_image_filtering_ml/intro.html">Machine Learning</a>
     </li>
     <li class="active">
       <a href="intro.html">Remote sensing</a>
