--- a/geosciences/remote_sensing/intro.html
+++ b/geosciences/remote_sensing/intro.html
@@ -41,7 +41,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Image filtering" href="Image_Filtering.html" />
-    <link rel="prev" title="Chapter 20 – Coding Example" href="../UROP_shapers/Chapter 20 -- Coding Example.html" />
+    <link rel="prev" title="Chapter 20 – Coding Example" href="../pytorch_image_filtering_ml/Chapter 20 -- Coding Example.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -113,7 +113,7 @@
       <a href="../Wave_dispersion.html">Wave dispersion</a>
     </li>
     <li class="">
-      <a href="../UROP_shapers/intro.html">Machine Learning</a>
+      <a href="../pytorch_image_filtering_ml/intro.html">Machine Learning</a>
     </li>
     <li class="active">
       <a href="">Remote sensing</a>
@@ -275,7 +275,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../UROP_shapers/Chapter 20 -- Coding Example.html" title="previous page">Chapter 20 – Coding Example</a>
+    <a class='left-prev' id="prev-link" href="../pytorch_image_filtering_ml/Chapter 20 -- Coding Example.html" title="previous page">Chapter 20 – Coding Example</a>
     <a class='right-next' id="next-link" href="Image_Filtering.html" title="next page">Image filtering</a>
 
     </div>
