--- a/modules/math_methods_1/Series.html
+++ b/modules/math_methods_1/Series.html
@@ -41,7 +41,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Vector calculus" href="Vector_Calculus.html" />
-    <link rel="prev" title="Order of an ODE" href="ODEs.html" />
+    <link rel="prev" title="ODEs" href="ODEs.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -101,16 +101,16 @@
         <a href="Eigenvalues.html">Eigenvalues</a>
       </li>
       <li class="">
-        <a href="Matrices_Linear_Algebra.html">Defining a matrix</a>
+        <a href="Matrices_Linear_Algebra.html">Matrices linear algebra</a>
       </li>
       <li class="">
-        <a href="Modelling.html">Numerical differentiation</a>
+        <a href="Modelling.html">Modelling</a>
       </li>
       <li class="">
         <a href="Multivariable_Calculus.html">Multivariable calculus</a>
       </li>
       <li class="">
-        <a href="ODEs.html">Order of an ODE</a>
+        <a href="ODEs.html">ODEs</a>
       </li>
       <li class="active">
         <a href="">Series</a>
@@ -743,7 +743,7 @@ sin(x) =  x - x**3/6 + x**5/120 - x**7/5040 + O(x**8)
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="ODEs.html" title="previous page">Order of an ODE</a>
+    <a class='left-prev' id="prev-link" href="ODEs.html" title="previous page">ODEs</a>
     <a class='right-next' id="next-link" href="Vector_Calculus.html" title="next page">Vector calculus</a>
 
     </div>
