--- a/modules/math_methods_1/Eigenvalues.html
+++ b/modules/math_methods_1/Eigenvalues.html
@@ -40,7 +40,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Defining a matrix" href="Matrices_Linear_Algebra.html" />
+    <link rel="next" title="Matrices linear algebra" href="Matrices_Linear_Algebra.html" />
     <link rel="prev" title="Coordinate systems" href="Coordinate_Systems.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -101,16 +101,16 @@
         <a href="">Eigenvalues</a>
       </li>
       <li class="">
-        <a href="Matrices_Linear_Algebra.html">Defining a matrix</a>
+        <a href="Matrices_Linear_Algebra.html">Matrices linear algebra</a>
       </li>
       <li class="">
-        <a href="Modelling.html">Numerical differentiation</a>
+        <a href="Modelling.html">Modelling</a>
       </li>
       <li class="">
         <a href="Multivariable_Calculus.html">Multivariable calculus</a>
       </li>
       <li class="">
-        <a href="ODEs.html">Order of an ODE</a>
+        <a href="ODEs.html">ODEs</a>
       </li>
       <li class="">
         <a href="Series.html">Series</a>
@@ -779,7 +779,7 @@ The corresponding eigenvector is:
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Coordinate_Systems.html" title="previous page">Coordinate systems</a>
-    <a class='right-next' id="next-link" href="Matrices_Linear_Algebra.html" title="next page">Defining a matrix</a>
+    <a class='right-next' id="next-link" href="Matrices_Linear_Algebra.html" title="next page">Matrices linear algebra</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
