--- a/modules/math_methods_1/Multivariable_Calculus.html
+++ b/modules/math_methods_1/Multivariable_Calculus.html
@@ -40,8 +40,8 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Order of an ODE" href="ODEs.html" />
-    <link rel="prev" title="Numerical differentiation" href="Modelling.html" />
+    <link rel="next" title="ODEs" href="ODEs.html" />
+    <link rel="prev" title="Modelling" href="Modelling.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -101,16 +101,16 @@
         <a href="Eigenvalues.html">Eigenvalues</a>
       </li>
       <li class="">
-        <a href="Matrices_Linear_Algebra.html">Defining a matrix</a>
+        <a href="Matrices_Linear_Algebra.html">Matrices linear algebra</a>
       </li>
       <li class="">
-        <a href="Modelling.html">Numerical differentiation</a>
+        <a href="Modelling.html">Modelling</a>
       </li>
       <li class="active">
         <a href="">Multivariable calculus</a>
       </li>
       <li class="">
-        <a href="ODEs.html">Order of an ODE</a>
+        <a href="ODEs.html">ODEs</a>
       </li>
       <li class="">
         <a href="Series.html">Series</a>
@@ -610,8 +610,8 @@ The outer integral is:  32/3
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Modelling.html" title="previous page">Numerical differentiation</a>
-    <a class='right-next' id="next-link" href="ODEs.html" title="next page">Order of an ODE</a>
+    <a class='left-prev' id="prev-link" href="Modelling.html" title="previous page">Modelling</a>
+    <a class='right-next' id="next-link" href="ODEs.html" title="next page">ODEs</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
