--- a/modules/math_methods_1/Vectors.html
+++ b/modules/math_methods_1/Vectors.html
@@ -101,16 +101,16 @@
         <a href="Eigenvalues.html">Eigenvalues</a>
       </li>
       <li class="">
-        <a href="Matrices_Linear_Algebra.html">Defining a matrix</a>
+        <a href="Matrices_Linear_Algebra.html">Matrices linear algebra</a>
       </li>
       <li class="">
-        <a href="Modelling.html">Numerical differentiation</a>
+        <a href="Modelling.html">Modelling</a>
       </li>
       <li class="">
         <a href="Multivariable_Calculus.html">Multivariable calculus</a>
       </li>
       <li class="">
-        <a href="ODEs.html">Order of an ODE</a>
+        <a href="ODEs.html">ODEs</a>
       </li>
       <li class="">
         <a href="Series.html">Series</a>
